data/derived/sp14/progs/unify/prog4807.ml.out
Characters 94-97:
  let f a x = h^sep^sepConcat(sep t) in
                              ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
